syntax = "proto3";

package linkedon;

option go_package = "github.com/orens/linkedon/linkedon";

service LinkedonService {
    rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse);
    rpc Follow(FollowRequest) returns (FollowResponse);
}

message Person {
    string name = 1;
    int32 age = 2;
    int32 id = 3;
}

message CreatePersonRequest {
    Person person = 1;
}

message CreatePersonResponse {
    bool success = 1;
}

message FollowRequest {
    int32 followerId = 1;
    int32 followeeId = 2;
}

message FollowResponse {
    bool success = 1;
}
